--- a/app/src/main/res/layout/progress_loading.xml
+++ b/app/src/main/res/layout/progress_loading.xml
@@ -11,11 +11,11 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_frame_loading"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/frame_loading"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_frame_loading"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:background="@drawable/frame_loading"/>-->
 
         <TextView
                 android:id="@+id/tv_progress_message"
